--- a/pages/p1/957319.md
+++ b/pages/p1/957319.md
@@ -1,4 +1,4 @@
-### 快递业现罢工潮 双十一戏未开场 台先塌了？(图)
+### 疫情爆不停 广东确诊男2度赴京 北京急停新年活动(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,13 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align: center;">
-  <img alt="快递 罢工 双十一 电商" src="https://img2.secretchina.com/pic/2017/11-14/p2032121a272864377-ss.jpg" style="height:337px; width:600px"/>
+  <img alt="武汉肺炎 北京 广东 辽宁" src="https://img3.secretchina.com/pic/2020/12-28/p2846391a305964405-ss.jpg" style="height:333px; width:600px"/>
   <br>
-   多个媒体不断曝出快递业
-   <strong>
-    罢工
-   </strong>
-   的消息。（图片来源：Getty Images）
+   北京暂停受理审批两节期间举办的大型营业性演出活动。（图片来源：视频截图）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -33,52 +29,50 @@
   </div>
  </div>
  <p>
-  【看中国2020年10月31日讯】（看中国记者丁晓雨综合报导）中国
+  【看中国2020年12月28日讯】（看中国记者黎小葵综合报导）年关将至，中国
   <strong>
-   电商
-  </strong>
-  平台
-  <strong>
-   双十一
-  </strong>
-  的鏖战即将开启，各大平台早早做好了决战的准备，可谓万事具备。然而，线上购物最关键的一环，支撑电商运转的
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/快递" target="_blank">
-    快递
+   <span href="https://www.secretchina.com/news/gb/tag/武汉肺炎" target="_blank">
+    武汉肺炎
    </span>
   </strong>
-  行业，最近却出了大问题。多个媒体不断曝出快递业
+  疫情持续扩大，继北京顺义区进入“战时状态”、其他区进入“紧急状态”后，官方28日再度公告，
   <strong>
-   罢工
+   北京
   </strong>
-  的消息，令今年双十一前，电商圈与快递业都弥漫着浓重的焦虑情绪。
+  将暂停审批元旦、“春节”期间大型演出活动。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  日前，中国国家邮政局公布，
-  <span href="https://zh.wikipedia.org/wiki/双十一" target="_blank">
-   双十一
+  此外，
+  <strong>
+   辽宁
+  </strong>
+  省疫情仍在快速扩散；
+  <strong>
+   广东
+  </strong>
+  更爆出一名男子染疫前2度前往
+  <span href="https://www.secretchina.com/news/gb/tag/北京" target="_blank">
+   北京
   </span>
-  期间预计日均快递业务量达4.9亿，约为日常2倍。但业务量增长的预测，却没有带来快递业的喜悦。快递罢工，成了近期新浪微博不断发酵的话题。涉及罢工的快递公司，涵盖四通一达。
+  ，目前其已遭强制隔离。
  </p>
  <p>
-  腾讯财经新闻有报导称，虽然百世快递、韵达、中通、圆通、申通等
-  <span href="https://zh.wikipedia.org/wiki/速遞" target="_blank">
-   快递
-  </span>
-  公司公开回应称，整体运行正常，但多名消费者表示，自己近期遇到了快递延误、甚至快递到了家门口被退回的情况。淘宝商家也证实，一些区域快递停发。
+  <strong>
+   北京再添确诊 官急取消新年活动
+  </strong>
  </p>
  <p>
-  有消费者称，包裹在距离自己不到3公里的地方竟然被退回了，“联系了卖家，卖家并没有拦截或者要求退回”，联系快递公司，客服告知是因为当地快递网点停运。
+  根据北京市卫生健康委的28日消息，12月27日0时至24时，北京再新增1例确诊病例。北京26日新增5例本地确诊病例和1例无症状感染者，均来自顺义区。近14日北京至少出现9起本土确诊病例。截至27日，北京共有3个中风险地区，为朝阳区汉庭酒店大山子店（包括底商）、顺义区南法信镇西杜兰村、顺义区高丽营镇张喜庄村。
  </p>
  <p>
-  微博上曝光的出现类似情况的快递，包括中通、申通、天天、邮政、圆通、韵达、百世等品牌下的网点均出现了停运。
+  对于北京疫情持续扩散，北京市文化和旅游局一级巡视员周卫民28日表示，2021年元旦、“春节”将至，北京全市各公园景区、演出场所、影剧院等将严格限量管理，强化分时预约，错开尖峰时间，暂停受理审批两节期间举办的大型营业性演出活动。
  </p>
  <p>
-  山东泰安地区的消费者下单，会被商家告知无法配送，待快递恢复运营再行下单。
+  对此，许多网友哀嚎，“两节（元旦、春节）是包含‘春节’吗？”“买的电影票还能正常看吗？”“有种可能没办法回家过年的预感。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -93,7 +87,7 @@
   </div>
  </center>
  <p>
-  河南登封消费者在微博爆料，称自己一个中通的快递信息多日迟迟没有更新，10月26日直接去了快递分拣中心，到了之后发现快递堆积如山，现场有不少用户和她一样等不到快递就自己上门寻找，发现该网点仅剩一名工作人员，有很多已经转行去做外卖员了。
+  也有北京市民在微博留言，“作为一个居住在顺义，上班在朝阳的我，第一次看到警车停在小区门口拉警戒线，属实有点慌张。既然大家都很关心，那我就说一下现状吧： 25号小区有个疑似被拉走了，26、27日顺义区紧急安排所有小区人员核酸检测。26日我正常加班，今天早上正常坐地铁上班，没有封小区，没有在家办公，地铁人依然很多，大家都还在为几斗米奔波，没人慌张。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -108,11 +102,7 @@
   </div>
  </center>
  <p>
-  江苏的消费者称自己的韵达快递5天没有更新物流信息，快递点电话无人接听。看新闻后才知道，快递员因为网点拖欠工资
-  <span href="https://zh.wikipedia.org/wiki/罷工" target="_blank">
-   罢工
-  </span>
-  了。
+  疑似病例确诊了，他行动轨迹中去过的生活超市，我们还在正常买菜；确诊那栋楼被封闭了，里面的居民没人给送饭，每天点外卖。 ”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -127,7 +117,7 @@
   </div>
  </center>
  <p>
-  湖南长沙一韵达快递网点大量快递延误、丢失，员工工资被拖欠数月，大量快递票件积压。一快递员表示，该服务站已拖欠20余名员工共计30多万元工资，自己从4月到现在只拿到5000元工资。
+  另有网友说，“希望全国实行，不然别人换个地继续”、“跨年演唱会赶快取消吧”、“好好活着才能来日方长”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -142,7 +132,12 @@
   </div>
  </center>
  <p>
-  深燃报导称，有中通快递前加盟商表示，网点大面积停业，从海南三亚到新疆乌鲁木齐都有，并且数量还在不断增加。
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/辽宁" target="_blank">
+    辽宁
+   </span>
+   疫情不断 大连“元旦最好不出门”
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -157,11 +152,7 @@
   </div>
  </center>
  <p>
-  据报导，快递员因派费降低
-  <span href="https://www.secretchina.com/news/gb/tag/罢工" target="_blank">
-   罢工
-  </span>
-  甚至改行，基层网点受困于不断提升的揽件指标甚至发空包充数，这些问题的背后与快递行业愈演愈烈的价格战不无关系。为了争夺更大的市场份额，快递公司纷纷选择低价冲量。
+  除了北京外，辽宁省境内近期病毒传播也极速扩散，27日新增6例本土确诊病例，其中沈阳市1例，大连市5例，另外，新增3例本土无症状感染者，这3例皆来自大连市。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -176,7 +167,7 @@
   </div>
  </center>
  <p>
-  由此带来的后果，就是快递行业正在全国范围内悄然上演一场“罢工潮”。
+  根据大连市卫生健康委员会副主任赵连27日在疫情防控记者会上表示，经辽宁省总指挥部同意，大连市已将10个社区划定为“中风险地区”，并实施相应管控措施。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -191,7 +182,7 @@
   </div>
  </center>
  <p>
-  “想过可能不挣钱，但没想到会亏这么多钱”，快递加盟商也是一肚子苦水，有人经营的中通网点平均每月亏损20多万元，已经亏了300多万元。亏损的主要原因是亏本收件和各种罚款。如果总部把发件指标订得高于网点实际能力，网点没有完成，不仅面临罚款，而且发件成本会上升，导致亏损。
+  截至12月28日零时，当地至少有40人在定点医院隔离，其中31人是无症状感染者。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -206,7 +197,7 @@
   </div>
  </center>
  <p>
-  加盟商称，“月月都亏本收件、交罚款”，自己网点收的快递数每个月不到3万件，但总部会把每月任务量定为5万件，网点为了完成任务只能低价、亏本收件。如果任务量不达标，管理中心还会收取每单0.5元的罚款。
+  大连市疾控中心28日也发布重要通知，要求市民“非必要不离连”，确需离连人员需持有7日内核酸检测阴性证明。此外，节日期间，当地市民也最好不要出门。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -225,116 +216,87 @@
   </ins>
  </center>
  <p>
-  多名快递加盟商还表示，任务量越定越高，罚款也越收越高。有的快递总公司规定，未达到指标的按照未完成票数处以3元每票的处罚。网点实在没法完成，为了避免罚款就“想法儿糊弄”，发“空包”应付，表面上完成任务量。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  尽管快递网点不堪重负，但任务量还在继续调高，包装费也从每天700元涨到了1200元。连续亏损之下，网点资金链断裂，无法按时发放工资，导致快递员纷纷离职，网点无法正常派件运营。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  “罚款的理由，除了任务量不达标，还有顾客投诉”，如果被投诉，网点不仅要赔偿消费者的损失，总部还会对网点有大约500元的罚款。有时候，客户的一般咨询，也被总部作为投诉对网点罚款。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  如果有消费者投诉到国家邮政局，第二次投诉罚网点1500元，同时KPI扣分。这些罚款也不能直接转嫁给快递员，“快递员被罚得多了就罢工，网点损失更大”。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  而快递企业之间愈演愈烈的价格战，导致收件价和派件费降低，末端网点和快递员的收入相应降低。据快递员称，现在派件费扣除短信费、电话费后，一单只能赚0.25元。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  对快递公司来说，价格战的最终目的，就是抢占市场份额，形成垄断，一家独大，最终控制市场价格。所以，目前快递业的相互侵轧短期内不会停止。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p style="margin-bottom:12px;">
-  <hr style="border-top: 1px dashed  ;" width="100%"/>
-  <br/>
-  【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  ：每位
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
-  <center>
-   <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/广东" target="_blank">
+    广东
    </span>
-  </center>
+   现本土病例 曾出差北京2次
+  </strong>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  中国北方疫情不断，南方也从未消停。据中国卫健委公告28日通报，12月27日全国新增确诊病例至少21例，新增无症状感染者20例，疑似病例1例，其中不仅辽宁疫情未歇，广东更惊现1例本土病例，确诊前曾2度出差北京。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  据指，这名染疫的27岁男子王某，居住于深圳市宝安区海安苑1栋。他于12月7日至12日、12月21日至25日在北京出差，其余时间均在深圳。 12月6日、14日、20日先后到深圳市宝安区医院进行3次核酸检测，结果为阴性。 12月26日从北京返回深圳后，当天下午到宝安区医院进行核酸检测，12月27日凌晨0时44分初筛结果呈阳性，后被强制隔离观察。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  官方指，截至12月27日7时，该男子密切接触者至少57人，另外其他密切接触者2人，以上59人已进行集中隔离医学观察。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  广东多家旅行社28日已决定暂停旅游团进京业务。南湖国旅也表示，北京疫情对旅行社的业务有影响，“近期不组织客人进京”。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  目前中国多地政府已表示不安排跨年活动，或取消相关活动。北京、上海等地提醒，新年期间非必要不要离开当地；陕西、辽宁等地则要求，一律取消集体团拜和大型联欢、聚餐、培训等活动。
   <center>
    <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
     <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
@@ -347,6 +309,43 @@
     </center>
    </div>
   </center>
+  <p>
+   来源:
+   <span href="/news/gb/tag/看中国  ">
+    看中国
+   </span>
+  </p>
+  <p>
+   本文短网址:
+   <input name="lname" onclick="javascript:this.focus();this.select();" onmouseover="javascript:this.focus();this.select();" type="text" value="http://kzg.io/gb412d"/>
+   转载请注明出处，
+   <span style="color:red">
+    严禁建立镜像网站
+   </span>
+   .
+  </p>
+  <p style="margin-bottom:12px;">
+   <hr style="border-top: 1px dashed  ;" width="100%"/>
+   <br/>
+   【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ：每位
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
+   <center>
+    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
+     <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
+    </span>
+   </center>
+  </p>
   <center>
    <div>
     <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
@@ -364,13 +363,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/950990.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/950990.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/950990.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/31/950990.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/957319.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/957319.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/957319.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/28/957319.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p5/950990.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p1/957319.md' width='0px' height='0px'/>
