--- a/pages/nf4514/n12649253.md
+++ b/pages/nf4514/n12649253.md
@@ -56,109 +56,6 @@
  以下是有关病毒疫情的实时更新：
 </h4>
 <h3>
- 英国单日病例数 创疫情来的最高值
-</h3>
-<p>
- 英国周一报告了至少41,385例中共病毒病例，打破了自疫情开始以来的每日记录。另有357人死于该病毒。
-</p>
-<p>
- 专家表示，由于新的变种病毒比其它病毒更容易传播，促使英国扩大封锁范围，并暂停了英国与其它国家的航空旅行。
-</p>
-<h3>
- 英格兰足球超级联赛停赛 曼城再爆确诊
-</h3>
-<p>
- （英国当地时间）周一晚上，埃弗顿（Everton）和曼城（Manchester City）的英格兰足球超级联赛（简称英超）被推迟，因为曼城队内有人的病毒检测结果呈阳性。
-</p>
-<p>
- 曼城队官方没有透露球队总共有多少个确诊病例，但其发布的声明表示，除了之前在圣诞节公布的4例确诊外，还有其他人的检测呈阳性反应。
-</p>
-<p>
- 英格兰足球超级联赛原定于当地时间晚上8点在英国利物浦的古迪逊公园球场开球。
-</p>
-<h3>
- 西班牙南部发现5例英国变种病例
-</h3>
-<p>
- 据当地政府消息，近日，西班牙南部地区对从英国返回安达卢西亚（Andalusia）的旅行者进行检测，发现了五例首次在英国发现新的变种病毒病例。
-</p>
-<p>
- 安达卢西亚地区政府周一发声明表示，这5个病例是该地区检测到的首批变种病例，其中三例是马拉加省（Malaga）的患者，另外两例是格拉纳达省（Granada）的患者。另外还有四个病例还在研究中。
-</p>
-<p>
- 马德里健康顾问安东尼奥・萨帕特罗（Antonio Zapatero）周六（12月26日）表示，该市已经检测到四例变种病例，其中一例是从英国抵达西班牙的人。
-</p>
-<p>
- 芬兰和瑞典也发现了变种病例。
-</p>
-<h3>
- 拜登计划利用《国防生产法》生产疫苗
-</h3>
-<p>
- 拜登顾问团队的成员周一表示，拜登计划在下个月上任后，通过《国防生产法》（Defense Production Act）来提中共病毒疫苗的产量。
-</p>
-<p>
- 传染病专家和流行病学家赛琳·岗德（Celine Gounder）28日接受CNBC采访时说：“你会看到他借助于《国防生产法》，他那里的想法是：确保个人防护设备、测试能力和疫苗的原材料供应充足。”
-</p>
-<p>
- 美国国会在1950年韩战爆发时通过《国防生产法》（Defense Production Act），该法律允许美国总统有权以国家安全为由，扩大工业生产关键原料或产品。川普总统曾于在3月18日宣布启用《国防生产法》，以确保私营企业可以加强紧急医疗用品和设备的制造和分销，使白宫有权要求生产商增加口罩、呼吸机和呼吸器的生产，并扩大抗击中共病毒的医疗能力。
-</p>
-<p>
- 动用此法表明美国政府应对中共病毒疫情行动升级。
-</p>
-<p>
- 据美国全国广播公司新闻网上周报导，拜登的团队一直在权衡是否要援引该法进行疫苗生产。
-</p>
-<h3>
- 川普签署纾困法案后 美国股市开盘走高
-</h3>
-<p>
- 在川普总统签署规模2.3万亿美元的疫情纾困和政府资金法案后，美国股市周一在华尔街开盘走高。
-</p>
-<p>
- 以下是开盘时的情况：
-</p>
-<p>
- 道指开盘上涨0.6%，或176点。
- <br/>
- 标普500指数上涨0.7%。
- <br/>
- 纳斯达克综合指数开盘上涨0.9%。
-</p>
-<p>
- 川普于周日晚间签署法案，避免政府关门，并扩大了疫情期间的失业救助，使数百万美国人得以维持生计。
-</p>
-<h3>
- 俄罗斯将英国飞行禁令延长至1月12日
-</h3>
-<p>
- 鉴于英国和其它几个国家出现新变种病毒传播，俄国中共病毒专案小组表示，该国已将往返英国的航班禁令延长至明年1月12日。
-</p>
-<p>
- 据俄国塔斯社（Tass）报导，病毒专案小组在声明中表示，“为了防止新的病毒感染输入和传播，特别工作组决定延长与英国的停航时间，以保护公众健康，限制措施已延长至2021年1月12日23时59分。”
-</p>
-<p>
- 自英国上周六（11月26日）实施封锁以来，欧洲、亚洲、南美、加勒比海和中东地区的40多个国家限制了来自英国的旅行。
-</p>
-<h3>
- 芬兰发现英国和南非的新变种病毒
-</h3>
-<p>
- 芬兰卫生研究所周一表示，该国发现了两种在英国和南非发现的新变种病毒。
-</p>
-<p>
- 根据声明，近日，芬兰有两人对首次在英国发现的变种病毒检测呈阳性反应，而第三名患者是对在南非发现的变种病毒检测呈阳性。这三位患者都是在出国旅行后于近期返回芬兰。
-</p>
-<p>
- 卫生研究所表示，目前受感染的患者情况良好，正在接受隔离治疗。之后，接触过这3名患者的人或被隔离，并被要求进行病毒检测。
-</p>
-<p>
- 芬兰政府在12月23日宣布，建议所有在12月7日、或之后抵达芬兰的英国旅客接受检测，无论他们是否有症状。
-</p>
-<p>
- 在芬兰检测到新的变种后几天，邻国瑞典的公共卫生局就宣布在斯德哥尔摩郊区的Sörmland地区发现了一例来自英国的新变种病例。
-</p>
-<h3>
  法国卫生部长：不排除第三次全国封锁
 </h3>
 <p>
@@ -190,21 +87,6 @@
 </p>
 <p>
  美联航则表示，10月份被辞退的约1.3万名员工可以重回岗位，但这很可能是“暂时的”政策，因为该公司预计明年第一季度的旅行需求不会有明显改善。
-</p>
-<h3>
- 冰岛收到首批辉瑞-BioNTech病毒疫苗
-</h3>
-<p>
- 冰岛外交部发言人周一证实，该国已收到第一批辉瑞和BioNTech生物技术公司研发的病毒疫苗。
-</p>
-<p>
- 据发言人说，一架载有冰岛第一批疫苗的飞机于28日上午降落在雷克雅未克-凯夫拉维克国际机场（Reykjavik-Keflavik International Airport ，KEF），该架飞机从荷兰的阿姆斯特丹起飞。
-</p>
-<p>
- 机上货物包括1万剂疫苗，预计将从周二（12月29日）开始推广。
-</p>
-<p>
- 辉瑞周一告诉美国有线电视新闻网，由于“小的后勤问题”，该公司不得不重新安排疫苗的交付时间，欧洲一些国家预计在周二收到疫苗。
 </p>
 <h3>
  白宫病毒专家：儿童无须疫苗也可安全返校
@@ -408,6 +290,8 @@
 <p>
  责任编辑：叶紫微
 </p>
+<div id="gtx-trans" style="position: absolute; left: 305px; top: 498.337px;">
+</div>
 </div>
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
