--- a/pages/nf4514/n12649253.md
+++ b/pages/nf4514/n12649253.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【疫情更新12.28】法国不排除第三次全国封锁" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/2012160644052124-600x400.jpg"/>
+<div><img alt="【疫情更新12.28】纽约市主要疫情指标超期" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/GettyImages-1230335374-600x400.jpg"/>
 <div class="caption">
- 图为2020年11月13日，在巴黎的第一区和第二区的Montorgueil大街上，巴黎人在此为圣诞节购物。（Siegfried Modola/Getty Images）
+ 2020年12月28日，一个身着儿童电视剧《芝麻街》（Sesame Street）中角色埃尔莫（Elmo）打扮的人走过纽约市的时代广场一个写有“2020继续前行！”（Move On 2020！）的标语牌。 （ANGELA WEISS/AFP via Getty Images）
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
