--- a/pages/nf4514/n12649253.md
+++ b/pages/nf4514/n12649253.md
@@ -56,6 +56,61 @@
  以下是有关病毒疫情的实时更新：
 </h4>
 <h3>
+ 西班牙染疫死亡人数突破5万
+</h3>
+<p>
+ 自上周四（12月24日）发布最新数据以来，西班牙新增298例中共病毒（武汉肺炎）死亡案例。西班牙卫生部称，自大流行开始以来，该国同类死亡总数已达到50,122人。
+</p>
+<p>
+ 根据约翰·霍普金斯大学的数据，该国目前在全球中共病毒死亡人数中排名第十。（注：中共被指隐瞒疫情，外界无法获得相关数字。）
+</p>
+<p>
+ 数据显示，该部还报告了24,462例中共病毒新增病例，使同类总数达到1,879,413例。
+</p>
+<h3>
+ 市长：纽约市关键疫情指标超出期望阈值
+</h3>
+<p>
+ 纽约市长白思豪（Bill de Blasio）今天说，纽约市所有中共病毒（武汉肺炎）相关指标持续高于所需阈值。
+</p>
+<p>
+ 根据市长的推文，纽约市新增近2,500例染疫病例，住院治疗病例新增224例，7天阳性率平均水平为7.24％。
+</p>
+<p>
+ 白思豪说：“这场战斗即将结束，我们现在不能放弃对抗。”
+</p>
+<p>
+ <center>
+ </center>
+</p>
+<blockquote class="twitter-tweet">
+ <p dir="ltr" lang="en">
+  Today’s
+  <ok href="https://twitter.com/hashtag/COVID19?src=hash&amp;ref_src=twsrc%5Etfw">
+   #COVID19
+  </ok>
+  indicators:
+ </p>
+ <p>
+  · 224 new hospitalizations
+  <br/>
+  · 2,428 new cases
+  <br/>
+  · 7.24% positivity rate (7-day avg.)
+ </p>
+ <p>
+  The end of this battle is in sight — we can’t let up the fight now.
+ </p>
+ <p>
+  — Mayor Bill de Blasio (@NYCMayor)
+  <ok href="https://twitter.com/NYCMayor/status/1343615305512312833?ref_src=twsrc%5Etfw">
+   December 28, 2020
+  </ok>
+ </p>
+</blockquote>
+<p>
+</p>
+<h3>
  军事人员被派往加州抗击中共病毒
 </h3>
 <p>
