--- a/pages/nsc418/n12649253.md
+++ b/pages/nsc418/n12649253.md
@@ -56,6 +56,15 @@
  以下是有关病毒疫情的实时更新：
 </h4>
 <h3>
+ 巴西新增431人染疫身亡
+</h3>
+<p>
+ 巴西卫生部周一（28日）表示，过去24小时内，巴西新增20,548例确诊病例和431例死亡病例。
+</p>
+<p>
+ 根据卫生部的数据，自大流行开始以来，巴西录得逾750万例确诊病例，官方死亡人数升至191,570人。
+</p>
+<h3>
  俄：染疫身亡人数比报告的高3倍多
 </h3>
 <p>
@@ -66,6 +75,21 @@
 </p>
 <p>
  不过，自大流行初期以来，一些俄罗斯专家就已表示，政府一直在淡化本国的疫情。
+</p>
+<p>
+ 周一，俄罗斯官员承认这是真的。俄罗斯联邦统计局（Rosstat）说，今年1月至11月所记录的、因一切原因造成的死亡人数，与前一年增加了229,700人。
+</p>
+<p>
+ 副总理戈利科娃（Tatiana Golikova）表示，“这段时期死亡率上升的81％以上是由冠状病毒（中共病毒）造成的。”这意味着有超过18.6万俄罗斯人死于中共病毒。
+</p>
+<p>
+ 自大流行开始以来，俄罗斯卫生官员已录得超过300万例感染病例，为世界第四高（注：中国和伊朗未列入此排名）。
+</p>
+<p>
+ 但他们只报告了55,265 例死亡病例，死亡率比其它疫情严重的国家要低得多。
+</p>
+<p>
+ 俄罗斯一直被批评在染疫身亡案例清单中，只记入验尸证实主要死因为中共病毒的死亡病例。
 </p>
 <h3>
  西班牙染疫死亡人数突破5万
