--- a/pages/nsc413/n12651589.md
+++ b/pages/nsc413/n12651589.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【疫情更新12.29】福西：美疫情在多方面变得失控" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/05/GettyImages-1227417367-600x400.jpg"/>
+<div><img alt="【疫情更新12.29】福西：美疫情在多方面变得失控" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/GettyImages-1210300345-600x400.jpg"/>
 <div class="caption">
- 美国目前已有逾30万人死于中共病毒。图为纽约最古老的公墓之一、位于布鲁克林的格林伍德公墓，数百名死于病毒的人埋在这里；2020年5月27日，人们经过公墓外为纪念死于该病毒的人而设立的纪念墙。（Photo by Spencer Platt/Getty Images）
+ 美国目前已有逾30万人死于中共病毒。图为2020年4月17日，在马萨诸塞州切尔西市，急救人员将一名患者从一家养老院送上救护车。（Scott Eisen/Getty Images）
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
