--- a/pages/nf4514/n12651589.md
+++ b/pages/nf4514/n12651589.md
@@ -47,6 +47,39 @@
  以下是有关病毒疫情的实时更新：
 </h4>
 <h3>
+ 新病例激增 丹麦将硬封锁延长两周
+</h3>
+<p>
+ 丹麦总理弗雷德里克森（Mette Frederiksen）周二（29日）表示，过去一个月新感染病例出现激增，为遏止冠状病毒（中共病毒）的传播，丹麦已将当前实行的全国性硬封锁延长两周，直到1月17日。
+</p>
+<blockquote class="twitter-tweet">
+ <p dir="ltr" lang="en">
+  Denmark to extend lockdown measures until January 17: TV2
+  <ok href="https://t.co/MXmR0oHmfN">
+   https://t.co/MXmR0oHmfN
+  </ok>
+ </p>
+ <p>
+  — Nordic News (@Nordic_News)
+  <ok href="https://twitter.com/Nordic_News/status/1343979236223287296?ref_src=twsrc%5Etfw">
+   December 29, 2020
+  </ok>
+ </p>
+</blockquote>
+<p>
+ <br/>
+ 弗雷德里克森在新闻发布会上说：“现在，与感染率、住院和死亡有关的情况比春季更加严重。”
+</p>
+<p>
+ 她表示，延长12月16日宣布的全国性限制措施，将使学校、购物中心、餐馆、酒吧和其它非必要商店保持关闭。
+</p>
+<p>
+ 在此次大流行中，丹麦防疫曾一直较为成功，直到12月份。在这个月，丹麦新感染病例数较11月增加了一倍以上。弗雷德里克森说：“如果我们现在不采取行动，我们在春季担心的情况可能会在未来几周和几个月内变成现实，”
+</p>
+<p>
+ 丹麦周二报告，过去24小时内，其580万人口中新增了2,621例病例，而新住院病例增加了28例，达到创纪录的900例，接近于收治染疫患者的病房的最大容量。
+</p>
+<h3>
  法卫生部长：或将很快在东部实行宵禁
 </h3>
 <p>
