同步于: 12月30日7时52分

--- a/pages/nsc418/n12651589.md
+++ b/pages/nsc418/n12651589.md
@@ -47,6 +47,101 @@
  以下是有关病毒疫情的实时更新：
 </h4>
 <h3>
+ 美国发现首例英国
+ <ok href="https://www.epochtimes.com/gb/tag/%E5%8F%98%E7%A7%8D%E7%97%85%E6%AF%92.html">
+  变种病毒
+ </ok>
+ 病例
+</h3>
+<p>
+ 美国科罗拉多州州长贾里德·波利斯（Jared Polis）周二（29日）在推特上宣布，发现了该州首例变种中共病毒B.1.1.7病例。这也是全美已知的首例此类病例。
+</p>
+<p>
+ B.1.1.7是一种传染性更强的菌株，最初于本月早些时候在英国发现。
+</p>
+<p>
+ 波利斯在推文中说：“科罗拉多人的健康和安全是我们的首要任务。我们将非常密切地监视该病例以及冠状病毒（中共病毒）的所有指标。”
+</p>
+<blockquote class="twitter-tweet">
+ <p dir="ltr" lang="en">
+  Today we discovered Colorado’s first case of the COVID-19 variant B.1.1.7, the same variant discovered in the UK.
+ </p>
+ <p>
+  The health and safety of Coloradans is our top priority and we will monitor this case, as well as all COVID-19 indicators, very closely.
+  <ok href="https://t.co/fjyq7QhzBi">
+   pic.twitter.com/fjyq7QhzBi
+  </ok>
+ </p>
+ <p>
+  — Governor Jared Polis (@GovofCO)
+  <ok href="https://twitter.com/GovofCO/status/1344031800230780933?ref_src=twsrc%5Etfw">
+   December 29, 2020
+  </ok>
+ </p>
+</blockquote>
+<p>
+</p>
+<h3>
+ 巴西单日新增死亡数 创9月中以来最高记录
+</h3>
+<p>
+ 巴西卫生部周二（29日）表示，在过去24小时内，该国又记录了58,718例确诊病例和1,111例死亡病例。
+</p>
+<p>
+ 新增的死亡数字，是自9月15日以来巴西卫生部所报告的最高单日死亡数字。
+</p>
+<blockquote class="twitter-tweet">
+ <p dir="ltr" lang="en">
+  Brazil recorded 58,718 additional confirmed cases of the novel coronavirus in the past 24 hours, along with 1,111 deaths from COVID-19, the Health Ministry said on Tuesday.
+  <ok href="https://t.co/J83bRN2W0k">
+   https://t.co/J83bRN2W0k
+  </ok>
+ </p>
+ <p>
+  — ANews (@ANews)
+  <ok href="https://twitter.com/ANews/status/1344045075916083202?ref_src=twsrc%5Etfw">
+   December 29, 2020
+  </ok>
+ </p>
+</blockquote>
+<p>
+ <br/>
+ 根据卫生部的数据，自大流行开始以来，巴西已录得近760万例确诊病例，官方死亡人数已升至192,681人。
+</p>
+<h3>
+ 新病例激增 丹麦将硬封锁延长两周
+</h3>
+<p>
+ 丹麦总理弗雷德里克森（Mette Frederiksen）周二（29日）表示，过去一个月新感染病例出现激增，为遏止冠状病毒（中共病毒）的传播，丹麦已将当前实行的全国性硬封锁延长两周，直到1月17日。
+</p>
+<blockquote class="twitter-tweet">
+ <p dir="ltr" lang="en">
+  Denmark to extend lockdown measures until January 17: TV2
+  <ok href="https://t.co/MXmR0oHmfN">
+   https://t.co/MXmR0oHmfN
+  </ok>
+ </p>
+ <p>
+  — Nordic News (@Nordic_News)
+  <ok href="https://twitter.com/Nordic_News/status/1343979236223287296?ref_src=twsrc%5Etfw">
+   December 29, 2020
+  </ok>
+ </p>
+</blockquote>
+<p>
+ <br/>
+ 弗雷德里克森在新闻发布会上说：“现在，与感染率、住院和死亡有关的情况比春季更加严重。”
+</p>
+<p>
+ 她表示，延长12月16日宣布的全国性限制措施，将使学校、购物中心、餐馆、酒吧和其它非必要商店保持关闭。
+</p>
+<p>
+ 在此次大流行中，丹麦防疫曾一直较为成功，直到12月份。在这个月，丹麦新感染病例数较11月增加了一倍以上。弗雷德里克森说：“如果我们现在不采取行动，我们在春季担心的情况可能会在未来几周和几个月内变成现实，”
+</p>
+<p>
+ 丹麦周二报告，过去24小时内，其580万人口中新增了2,621例病例，而新住院病例增加了28例，达到创纪录的900例，接近于收治染疫患者的病房的最大容量。
+</p>
+<h3>
  法卫生部长：或将很快在东部实行宵禁
 </h3>
 <p>
@@ -196,11 +291,7 @@
  冯德莱恩在推文中写道，将有更多的疫苗送来欧盟。
 </p>
 <p>
- 欧洲药管局在12月21日批准辉瑞/BioNTech中共病毒疫苗几天后，欧盟于周日（12月27日）正式启动疫苗接种活动。在疫苗推出之际，欧洲各国政府正试图遏制在英国首次发现的新
- <ok href="https://www.epochtimes.com/gb/tag/%E5%8F%98%E7%A7%8D%E7%97%85%E6%AF%92.html">
-  变种病毒
- </ok>
- 的传播。
+ 欧洲药管局在12月21日批准辉瑞/BioNTech中共病毒疫苗几天后，欧盟于周日（12月27日）正式启动疫苗接种活动。在疫苗推出之际，欧洲各国政府正试图遏制在英国首次发现的新变种病毒的传播。
 </p>
 <blockquote class="twitter-tweet" data-width="550">
  <p dir="ltr" lang="en">
