--- a/pages/nsc412/n12651589.md
+++ b/pages/nsc412/n12651589.md
@@ -477,7 +477,7 @@
  美国有线电视新闻网（CNN）获悉，美国航空公司（American Airlines）正在通知大部分因为经济纾困法案而从休假中归来的员工，他们还不需要实际报到。不过，他们将获得联邦资金的支付。
 </p>
 <p>
- 纾困法案经总统签署成法律后，美航和其他航空公司必须将包括飞行员和空姐在内的被辞退员工重新列入其工资单。联邦基金将支付到明年3月31日。
+ 纾困法案经总统签署成法律后，美航和其它航空公司必须将包括飞行员和空姐在内的被辞退员工重新列入其工资单。联邦基金将支付到明年3月31日。
 </p>
 <p>
  虽然目前各航空公司因假期期间飞行人数回升，收入稍微上涨，但飞行需求依然低迷，并且还需配合防疫措施禁止在其设施、驾驶舱和机舱内再涌入数千名员工。
@@ -503,7 +503,7 @@
  据斯康星州格拉夫顿的Aurora医疗中心发言人说，该设施因为疫苗存储错误不得不在上周六（12月26日）丢弃大约500剂Moderna生产的中共病毒疫苗。
 </p>
 <p>
- 医疗中心在声明中写道：“我们发现，大约有50瓶Moderna疫苗在一夜之间被无意中从药房冰箱中取出。”“我们的内部审查确定，这是无意中的人为错误，（医疗人员）暂时移走这些小瓶以取用其他物品后，没有将疫苗瓶放回冰箱。”
+ 医疗中心在声明中写道：“我们发现，大约有50瓶Moderna疫苗在一夜之间被无意中从药房冰箱中取出。”“我们的内部审查确定，这是无意中的人为错误，（医疗人员）暂时移走这些小瓶以取用其它物品后，没有将疫苗瓶放回冰箱。”
 </p>
 <p>
  “不幸的是，大部分（的疫苗）因为未达到生存能力所需的温度储存要求，必须丢掉。”声明写道，对此“我们很失望，并对发生这种情况感到遗憾。”
@@ -617,7 +617,7 @@
  指南说，有病历的成年人患中共病毒（COVID-19 ）造成严重病征的风险会较高。因此， CDC 认为已获美国食品药品监督管理局 (FDA) 批准的疫苗，可对这些有病历人士注射，前题是他们对疫苗中的任何成分都没有严重过敏反应。
 </p>
 <p>
- 此外，其他疾病或药物而导致免疫系统减弱的人、具有自身免疫性疾病的人也可接种疫苗。
+ 此外，其它疾病或药物而导致免疫系统减弱的人、具有自身免疫性疾病的人也可接种疫苗。
 </p>
 <h3>
  变种病毒传入印度 6名确诊患者从英国入境
@@ -704,7 +704,7 @@
  。
 </p>
 <p>
- 责任编辑：叶紫微
+ 责任编辑：叶紫微#
 </p>
 <div id="gtx-anchor" style="position: absolute; visibility: hidden; left: 10px; top: 559.812px; width: 257px; height: 19px;">
 </div>
