--- a/pages/nsc418/n12654235.md
+++ b/pages/nsc418/n12654235.md
@@ -1,4 +1,4 @@
-### 【疫情更新12·30】美CDC：变种病毒在人传人
+### 【疫情更新12·30】美CDC：变种病毒传播快
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
