--- a/pages/p8/957453.md
+++ b/pages/p8/957453.md
@@ -1,4 +1,4 @@
-### “信赖”与“热忱”比逻辑更重要(组图)
+### 蠔油不是酱油 牢记“1选2用3存”(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,22 +6,13 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align: center;">
-  <img alt="吉田幸弘 信赖 热忱 逻辑 " src="https://img3.secretchina.com/pic/2020/8-26/p2762852a371417194-ss.jpg"/>
+ <p style="text-align:center">
+  <img alt="蠔油 牡蛎 调味料 提鲜" src="https://img3.secretchina.com/pic/2020/12-31/p2848422a536816985-ss.jpg"/>
   <br>
-   “
    <strong>
-    信赖
+    蠔油
    </strong>
-   ”与“
-   <strong>
-    热忱
-   </strong>
-   ”比
-   <strong>
-    逻辑
-   </strong>
-   更重要。（图片来源：Adobestock）
+   的选购，牢记“一选二用三存”。（图片来源：Adobe stock)
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -33,86 +24,59 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://141.164.51.119:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://141.164.51.119:10000/videos/blog/jiexi1400.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://167.172.10.89:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://167.172.10.89:8808/gb/)  &nbsp;|&nbsp; [YouTube热门频道](http://158.247.203.241/youtube.html) &nbsp;|&nbsp; [网门免翻墙](http://158.247.203.241:11000/show.aspx?name=ogHome)
-
-#### 💥 [九评共产党](http://141.164.51.119:10000/videos/res/jiuping/)&nbsp; |&nbsp; [漫谈党文化](http://141.164.51.119:10000/videos/res/mtdwh/)&nbsp; |&nbsp; [共产主义的终极目的](http://141.164.51.119:10000/videos/res/zjmd/)&nbsp; |&nbsp; [魔鬼在統治著我們的世界](http://141.164.51.119:10000/videos/res/TheSpecter/)  
-
-#### [ 🔥  《大裤衩》第一集 - 揭秘央视电视台《焦点追踪》节目组的幕后故事](http://141.164.51.119:10000/videos/news/../res/big-shorts/index.html)
-
-#### [ 🔥  忧心中国会回到文革时期！前中国黑龙江省鸡西市副市长李传良，真名退出共产党](http://141.164.51.119:10000/videos/news/quit01.html)
-
-#### [ 🔥  走出文化亡国第十集 伪专家和造新闻 － 中共宣传机器愚弄民众的两个“致命暗器”](http://141.164.51.119:10000/videos/news/../res/zcwhwg/index.html)
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
+  <span href="https://www.secretchina.com/news/gb/tag/蠔油" target="_blank">
+   蠔油
+  </span>
+  是日常生活中比较常见的
   <strong>
-   <span style="font-size:22px">
-    逻辑很重要，但
-    <span href="https://www.secretchina.com/news/gb/tag/信赖" target="_blank">
-     信赖
-    </span>
-    与热忱更重要
-   </span>
+   调味料
   </strong>
+  之一，很多家庭用来调味、炒菜和做蘸料用，看似平平无奇的食材，有的食材加入了蠔油一起烹调，就能让食材增添鲜味，吃起来口感更好了。蠔油之所以有很好的提鲜作用，是因为蠔油是用
+  <strong>
+   牡蛎
+  </strong>
+  熬制而成，因此蠔油里的主要成分里肯定是少不了蠔汁，没有“蠔汁”的蠔油，就不能称之为蠔油了，而且蠔油虽然有很好的
+  <strong>
+   提鲜
+  </strong>
+  作用，但也不能任何菜肴都随便乱用。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  过去主管的命令是不可违背的。
- </p>
- <p>
-  可是，现在职权骚扰之类的问题逐渐受到重视，那种用权力来压人的强势主管也越来越少了。
- </p>
- <p>
-  那么，怎么管理部属才正确呢？
- </p>
- <p>
-  某主管A认为，新时代主管应该用
-  <span href="https://www.secretchina.com/news/gb/tag/逻辑" target="_blank">
-   逻辑
+  真正纯正的蠔油是用
+  <span href="https://www.secretchina.com/news/gb/tag/牡蛎" target="_blank">
+   牡蛎
   </span>
-  来说服部属。
+  熬制而成，经过滤浓缩后而成，也被称之为“蠔汁”。到市场选购蠔油时要学会如何选购，有一些蠔油其实“水蠔油”，成分里“蠔汁”特别少，而且还有很多添加剂组成，这种蠔油并不是优质的蠔油。告诉大家在购买时的妙方，牢记“一选二用三存”（蠔油选购、蠔油使用、蠔油存放），学会保证不会出错。
  </p>
  <p>
-  A想用无懈可击的逻辑思维，说服部属做事。
+  <strong>
+   一、选购蠔油3技巧
+  </strong>
  </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
  <p>
-  然而，A的管理法并不奏效。过去逻辑思维的书籍大行其道时，很多人都成了死守逻辑的笨蛋，A也是其中之一。他们认为只要用逻辑说服，对方一定会言听计从。
+  <strong>
+   技巧1：看蠔油包装上的配料表——（没有“蠔汁2字”的不要买）
+  </strong>
  </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
  <p>
-  A失败的原因，在于他疏忽了一项人性特质。对一般人来说，“谈话的对象”远比“谈话的内容”重要。
+  不同品牌、不同价位蠔油的包装配料表上用的配料是不大一样的，而且在配料的排序位置上也不大相同。因为根据《食品标识管理规定》，要求食品在配料表里明确标示食品的组成成分和配料清单，标注的成分必须以根据添加的量递减的顺序进行标注。
+ </p>
+ <p>
+  <strong>
+   技巧2：看清标准号GB/T21999
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -127,94 +91,7 @@
   </div>
  </center>
  <p>
-  古代
-  <span href="https://www.google.com.tw/url?sa=t&amp;rct=j&amp;q=&amp;esrc=s&amp;source=web&amp;cd=&amp;cad=rja&amp;uact=8&amp;ved=2ahUKEwiLvcetrLjrAhUVyYsBHROeD10QFjAAegQIAxAB&amp;url=https%3A%2F%2Fzh.wikipedia.org%2Fzh-tw%2F%25E5%25B8%258C%25E8%2585%258A&amp;usg=AOvVaw3c_R4hefrVTMFnCMv0WhO5">
-   希腊
-  </span>
-  哲人
-  <span href="https://www.google.com.tw/url?sa=t&amp;rct=j&amp;q=&amp;esrc=s&amp;source=web&amp;cd=&amp;cad=rja&amp;uact=8&amp;ved=2ahUKEwiMoKukrLjrAhWQwpQKHU-4CGwQmhMwFnoECA0QAg&amp;url=https%3A%2F%2Fzh.wikipedia.org%2Fzh-tw%2F%25E4%25BA%259A%25E9%2587%258C%25E5%25A3%25AB%25E5%25A4%259A%25E5%25BE%25B7&amp;usg=AOvVaw0UGGLF8TiPV0jVMZSUCp-a">
-   亚里斯多德
-  </span>
-  曾言，说服别人有三大要素。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  分别是“信赖”、“
-  <span href="https://www.secretchina.com/news/gb/tag/热忱" target="_blank">
-   热忱
-  </span>
-  ”、“逻辑”。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  如果你不按照这个顺序，或是缺了其中一项要素，都没办法成功说服对方。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  也就是说，在你传达逻辑思维之前，要先有信赖和热忱做为基础。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  假设有一个主管这样跟你说：“这一次的目标没达成，分店可能就经营不下去了，所以大家一起努力克服难关吧。”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  如果讲这句话的主管，平时都不跟部属交心，讲话也缺乏热情，凡事只注重表面功夫，部属听了根本不会有干劲。换成是我遇到这种主管，只会觉得他在讲干话。反之，平时懂得跟部属交心的主管，说服别人的方式充满热忱，团队成员会很自然地产生干劲，一同克服难关。
+  超市里上架的蠔油大多都会有这个编号的，如果有的就认准：GB/T21999的来购买。GB/T是什么意思？它是代表国家（中国大陆）标准推荐的产品编号。有质检保证的。如果编号是其它字母开头的则是地方或者个人作坊制造的，不建议购买。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -229,9 +106,9 @@
   </div>
  </center>
  <p style="text-align: center;">
-  <img alt="平时懂得跟部属交心的主管，说服别人的方式充满热忱，团队成员会很自然地产生干劲，一同克服难关。" src="https://img3.secretchina.com/pic/2020/8-26/p2762842a160839591-ss.jpg"/>
+  <img alt="蠔油呈红褐色，并且是粘稠状，能够挂壁的最好" src="https://img3.secretchina.com/pic/2020/12-30/p2847272a900236700-ss.jpg"/>
   <br>
-   平时懂得跟部属交心的主管，说服别人的方式充满热忱，团队成员会很自然地产生干劲，一同克服难关。（图片来源：Adobestock）
+   蠔油呈红褐色，并且是粘稠状，能够挂壁的最好。（图片来源：Adobe stock)
   </br>
  </p>
  <center>
@@ -247,53 +124,8 @@
   </div>
  </center>
  <p>
-  这跟亚里斯多德的思维有异曲同工之处。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  逻辑确实很重要，但缺乏“信赖”和“热忱”也难以服众。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  想获得部属的信赖，请注意以下两点：
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
   <strong>
-   1、微不足道的约定也得遵守
+   技巧3：看蠔油的粘稠度
   </strong>
  </p>
  <center>
@@ -309,7 +141,7 @@
   </div>
  </center>
  <p>
-  上司比部属忙碌是正常的，有时候答应部属的事情会顺延，或是没办法实现。
+  蠔油呈红褐色，并且是粘稠状，能够挂壁的最好，这个步骤的判断，可以在确定配料表成分之后买回家来看。蠔油的体态浓稠流行速度比较慢，而且出现很明显的挂壁效果是好蠔油。如果比较稀薄，流动相对顺畅的不建议购买。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -324,7 +156,9 @@
   </div>
  </center>
  <p>
-  那些约定本身也不是什么大事。
+  <strong>
+   二、蠔油的使用——“4用”、“3不要”
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -339,7 +173,159 @@
   </div>
  </center>
  <p>
-  不过，既然你是主管，就应该信守承诺。
+  蠔油作为日常生活中比较常用的配料之一，在很多人的厨房里都是必不可少的，很多人在炒菜烹调的过程中，都习惯加入少许的蠔油来
+  <span href="https://www.secretchina.com/news/gb/tag/提鲜" target="_blank">
+   提鲜
+  </span>
+  ，各种以蠔油为菜名的美味菜肴也不在少数，各种蠔油生菜、蠔油香菇、蠔油鸡翅等等，这种菜肴在烹饪的过程中都少不了蠔油的添加，加入了蠔油一起烹调，味道更是鲜上加鲜了，但并不是所有的菜肴在烹饪的过程中都需要使用到蠔油的，用法不对不但不能提鲜，还浪费了食材。因此在使用蠔油时，还需要注意以下这“4用”、“3不要”。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  <strong>
+   “4用”：以下4种情况可以适当使用蠔油：
+  </strong>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  <strong>
+   1、拌料、蘸料。
+  </strong>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  很多凉拌菜里本身没有任何味道，基本上都是靠配料来提味的，在凉拌的配料搭配里生抽、蠔油都是必不可少的，对提鲜增香很有帮助。另外我们在吃火锅、白灼之类的美食，都喜欢调一个自己喜欢的蘸料，这个时候适当的在蘸料里加入蠔油，蘸食材吃味道也是很鲜美的。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  <strong>
+   2、肉类食材上浆、调味。
+  </strong>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  平时在烹饪各种肉类食材的食材，有的需要提前腌制一下，也就是给肉菜上浆，这样烹饪出来的肉更鲜嫩，这个时候加入适量的蠔油可以提鲜，让肉菜更是鲜上加鲜了。在炒肉、红烧肉、酱焖肉等等，加入少许的蠔油也有很好的提鲜作用。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  <strong>
+   3、海鲜类。
+  </strong>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  很多海鲜食材本身也很鲜美了，在烹饪的过程中加入少许的蠔油，可以让味道更鲜上加鲜。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p style="text-align: center;">
+  <img alt="炒蔬菜加入蠔油既能提鲜，还不破坏色泽。" src="https://img3.secretchina.com/pic/2020/8-19/p2758462a422757973-ss.jpg"/>
+  <br>
+   炒蔬菜加入蠔油既能提鲜，还不破坏色泽。（图片来源：Adobe stock)
+  </br>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  <strong>
+   4、蔬菜调味。
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -358,22 +344,7 @@
   </ins>
  </center>
  <p>
-  千万不要只对客户或上司守信用。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  部属对主管失信一事，比你想得更严重。哪怕会延宕其他行程，你也该遵守自己跟部属的约定；不要动不动就讲一些场面话，随便答应部属事情。
+  蔬菜的烹饪也可以适当的添加蠔油，用蠔油来替代鸡精，蠔油也有很好的提鲜作用，有的人炒蔬菜喜欢加点酱油提鲜，其实加酱油会破坏蔬菜的色泽，加入蠔油既能提鲜，还不破坏色泽。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -389,100 +360,8 @@
  </center>
  <p>
   <strong>
-   2、言行一致
+   “3不要”如下：以下这3种情况建议不要放蠔油了：
   </strong>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  上司必须实践自己说过的话。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  假设，你是一个会自己跑业务的行动派主管。你答应部属要拉到新客户，结果忙到没有时间兑现承诺。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  这时候你在会议上要求大家拉新客户，一定会遭到部属反驳，因为你自己就没做到。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  “主管整天要求我们整理环境，自己的资料却乱放一通。”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  “主管叫我们档案加密，自己却没照做。”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  主管的行为部属都看在眼里，请各位务必言行一致。
-  <br>
-  </br>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -498,11 +377,7 @@
  </center>
  <p>
   <strong>
-   本文整理、节录自吉田幸弘《
-   <span href="https://www.books.com.tw/products/0010858848">
-    高效领导者的工作好习惯：真正的强势管理，来自43个反直觉的关键原则
-   </span>
-   》一书，文章仅代表作者个人立场和观点。由采实文化授权转载，欲阅读完整作品，欢迎参考原书。
+   1、建议不要与辛辣调料、糖、醋一起使用。
   </strong>
  </p>
  <center>
@@ -517,27 +392,104 @@
    </center>
   </div>
  </center>
- <p style="margin-bottom:12px;">
-  <hr style="border-top: 1px dashed  ;" width="100%"/>
-  <br/>
-  【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  ：每位
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
-  <center>
-   <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
-   </span>
-  </center>
+ <p>
+  蠔油本身味道鲜美，使用蠔油调味，建议不要与辛辣调料、糖、醋一起使用。因为这些配料一起烹饪的食材本身就是比较“重”口味了，加入蠔油的作用微乎其微，蠔油的鲜味会被配料遮盖住了。例如：糖醋排骨、辣子鸡等菜肴。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  <strong>
+   2、不要煮太长时间，鲜味会流失。
+  </strong>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  蠔油不要在锅中久煮，会失去蠔油的鲜味，使蠔香味逃散。一般是在菜肴即将出锅前或者出锅后趁热加入的，出锅前和食材一起炒均，即可。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  <strong>
+   3、不要直接用于拌菜。
+  </strong>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  都知道蠔油和蔬菜、凉拌菜时绝佳搭配，但是蠔油不要直接用来拌菜，拌菜时最好用高汤调开，再进行拌菜，或者先下油锅和大蒜一起炒香，勾芡浓稠再用来拌蔬菜，这样吃着更香，直接放的话鲜味不容易均匀的发散出来。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  <strong>
+   四、蠔油如何存放
+  </strong>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  说到蠔油在使用和存放这点很多人都要吐槽了，尤其是蠔油的使用每次从瓶口里倒出来都是到处都是，而且量还不好把握，可以把蠔油翻在一起按压的玻璃管里，这样用多少挤多少，比较方便。蠔油如果保存方式不对，黏度会变稀、鲜味大打折扣，甚至有的还会出现变质的情况。买大瓶装一次打开，使用的时间太长，容易出现鲜度降低的情况，建议小瓶用完再买新的。另外蠔油开盖后放冰凉保存比较妥当，不要放在靠近炉灶温度比较高的环境下，这样容易让蠔油受热，鲜度降低变稀。常温下尽量要避光、避高温。
   <center>
    <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
     <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
@@ -550,6 +502,40 @@
     </center>
    </div>
   </center>
+  <p>
+   责任编辑:wendy
+  </p>
+  <p>
+   本文短网址:
+   <input name="lname" onclick="javascript:this.focus();this.select();" onmouseover="javascript:this.focus();this.select();" type="text" value="http://kzg.io/gb414n"/>
+   转载请注明出处，
+   <span style="color:red">
+    严禁建立镜像网站
+   </span>
+   .
+  </p>
+  <p style="margin-bottom:12px;">
+   <hr style="border-top: 1px dashed  ;" width="100%"/>
+   <br/>
+   【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ：每位
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
+   <center>
+    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
+     <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
+    </span>
+   </center>
+  </p>
   <center>
    <div>
     <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
@@ -567,13 +553,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/944200.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/944200.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/944200.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/08/26/944200.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/957453.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/957453.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/957453.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/31/957453.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p8/944200.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p8/957453.md' width='0px' height='0px'/>
