同步于: 1月1日1时52分

--- a/pages/nf4514/n12656978.md
+++ b/pages/nf4514/n12656978.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【疫情更新12·31】美国每日死亡人数创新高" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/GettyImages-1230352868-600x400.jpg"/>
+<div><img alt="【疫情更新12·31】佛州当选国会议员染疫" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/GettyImages-80852553-600x400.jpg"/>
 <div class="caption">
- 图为2020年12月29日，加州洛杉矶县的医护人员将一名潜在的染疫患者装入救护车，将其送往加州霍桑的一家医院。（APU GOMES/AFP via Getty Images）
+ 图为美国国会众议员当选人玛丽亚·埃尔维拉·萨拉萨尔（Maria Elvira Salazar）。（Jason Kempin/Getty Images）
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
