--- a/pages/nf4514/n12656978.md
+++ b/pages/nf4514/n12656978.md
@@ -7,7 +7,7 @@
 
 <div><img alt="【疫情更新12·31】中国现英国新毒株" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/shutterstock_1669697443-600x400.jpg"/>
 <div class="caption">
- 图为美国国会众议员当选人玛丽亚·埃尔维拉·萨拉萨尔（Maria Elvira Salazar）。（Jason Kempin/Getty Images）
+ 早先在英国发现的变种中共病毒（COVID-19），目前已在许多国家都出现病例。（公有领域）
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
